Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87803

QStandardPaths::writableLocation(QStandardPaths::GenericDataLocation) points to an inaccessible location

XMLWordPrintable

    • Android

      Setting `targetSdkVersion` to 29 crashes the app if it uses `QStandardPaths::writableLocation(QStandardPaths::GenericDataLocation)`. Because the method uses `Environment#getExternalStorageDirectory()`

      Unfortunately, this method was deprecated in API level 29, and the allowed `targetSdkVersion` for Play Store is going to be bumped this November 2nd.

        For Gerrit Dashboard: QTBUG-87803
        # Subject Branch Project Status CR V

            piotrmi Piotr Mikolajczyk
            sh_zam Sharaf Zaman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes